<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:segmentedgroup="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center|top"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_owner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/owner_circle" />


            <View
                android:layout_width="@dimen/margin_20"
                android:layout_height="@dimen/margin_2"
                android:background="@color/A5" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_question"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/questions_answers" />


            <View
                android:layout_width="@dimen/margin_20"
                android:layout_height="@dimen/margin_2"
                android:background="@color/A5"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_activity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/active_area" />

            <View
                android:layout_width="@dimen/margin_20"
                android:layout_height="@dimen/margin_2"
                android:background="@color/A5"
                android:visibility="invisible" />
        </LinearLayout>
    </LinearLayout>



    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_px_1"
        android:background="@color/EE" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <com.qixiu.intelligentcommunity.widget.SegmentedGroup
            android:id="@+id/rg_footprint"
            android:layout_width="346dp"
            android:layout_height="30dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:orientation="horizontal"
            segmentedgroup:sc_border_width="1.5dp"
            segmentedgroup:sc_corner_radius="5dp">

            <RadioButton
                android:id="@+id/rb_owner_whole"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:text="全部"
                android:textColor="#969696"
                android:textSize="13sp" />

            <RadioButton
                android:id="@+id/rb_owner_my"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:text="我的"
                android:textColor="#969696"
                android:textSize="13sp" />

        </com.qixiu.intelligentcommunity.widget.SegmentedGroup>


    </LinearLayout>


    <!--<com.qixiu.intelligentcommunity.widget.SegmentedGroup-->
    <!--android:id="@+id/rg_footprint"-->
    <!--android:layout_width="150dp"-->
    <!--android:layout_height="30dp"-->
    <!--android:layout_marginLeft="12dp"-->
    <!--android:layout_marginRight="12dp"-->
    <!--android:layout_marginTop="12dp"-->
    <!--android:gravity="center"-->
    <!--android:orientation="horizontal"-->
    <!--segmentedgroup:sc_border_width="1.5dp"-->
    <!--segmentedgroup:sc_corner_radius="5dp"-->
    <!--&gt;-->

    <!--<RadioButton-->
    <!--android:id="@+id/rb_owner_whole"-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="fill_parent"-->
    <!--android:layout_weight="1"-->
    <!--android:button="@null"-->
    <!--android:checked="true"-->
    <!--android:gravity="center"-->
    <!--android:text="全部"-->
    <!--android:textColor="#969696"-->
    <!--android:textSize="13sp"/>-->

    <!--<RadioButton-->
    <!--android:id="@+id/rb_owner_my"-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="fill_parent"-->
    <!--android:layout_weight="1"-->
    <!--android:button="@null"-->
    <!--android:gravity="center"-->
    <!--android:text="我的"-->
    <!--android:textColor="#969696"-->
    <!--android:textSize="13sp"/>-->
    <!--</com.qixiu.intelligentcommunity.widget.SegmentedGroup>-->


</LinearLayout>
